  and path "bar/baz", even if bzr does not recognize "foo" as a known URL
  scheme.  Previously these URLs would be treated as local paths.
  (Gordon Tyler)


New Features
************

* Support ``--directory`` option for a number of additional commands:
  conflicts, merge-directive, missing, resolve, shelve, switch,
  unshelve, whoami. (Martin von Gagern, #527878)

Bug Fixes
*********

* ``bzr init`` does not recursively scan directory contents anymore
  leading to faster init for directories with existing content.
  (Martin [gz], Parth Malwankar, #501307)

* ``bzr log --exclude-common-ancestry`` is now taken into account for
  linear ancetries. (Vincent Ladeuil, #575631)

* ``bzr pull`` now works when a lp: URL is explicitly defined as the parent
  or pull location in locations.conf or branch.conf.
  (Gordon Tyler, #534787)

* Ensure that wrong path specifications in ``BZR_PLUGINS_AT`` display
  proper error messages. (Vincent Ladeuil, #591215)

* Explicitly removing ``--profile-imports`` option from parsed command-line
  arguments on Windows, because bzr script does the same.
  (Alexander Belchenko, #588277)

* Fetching was slightly confused about the best code to use and was
  using a new code path for all branches, resulting in more lookups than
  necessary on old branches. (Robert Collins, #593515)

* Final fix for 'no help for command' issue. We now show a clean message
  when a command has no help, document how to set help more clearly, and
  test that all commands available to the test suite have help.
  (Robert Collins, #177500)

* Progress output is cleaned up when exiting.  (Aaron Bentley)

* Raise ValueError instead of a string exception.
  (John Arbash Meinel, #586926)

* Relative imports in plugins are now handled correctly when using
  BZR_PLUGINS_AT. (Vincent Ladeuil, #588959)

* ``ScriptRunner`` now strips off leading indentation from test scripts,
  which previously caused "SyntaxError: No command for line".
  (Martin Pool)
